# ic-cron-sonic-bot-example

./: .gitignore  Cargo.toml  build.sh  can.did  canister_ids.json  dfx.json
src/: actor.rs
src/clients/: dip20.rs  mod.rs  sonic.rs  xtc.rs
src/common/: guards.rs  mod.rs  types.rs  utils.rs
